Fixing spacing in admin profile menu dropdown

--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -349,6 +349,10 @@
 
         .profile-menu-options {
             margin-left: -48px;
+
+            li {
+                padding: 0;
+            }
         }
     }
 
